@@ -1,3 +1,7 @@
+2008-02-09  Sven Herzberg  <sven@imendio.com>
+
+	* src/ui/game.c: (game_init): use G_DEFINE_TYPE
+
 2008-02-08  Sven Herzberg  <sven@imendio.com>
 
 	* src/ui/game-network-player.c: (game_network_player_init): use
